# pipelex-starter-python

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODOS.md  pyproject.toml
.claude/skills/bootstrap/: SKILL.md
.claude/skills/bootstrap/scripts/: bootstrap.py
.claude/skills/release/: SKILL.md
docs/: cli-architecture.md  codegen.md
my_project/: cli.py  hello_world.py  run_output.py  runner.py
my_project/examples/: extract_entities.py  summarize_pdf.py
my_project/methods/extract-entities/: main.mthds
my_project/methods/summarize-pdf/: main.mthds
piper/: cli.py  errors.py  file_input.py  inputs.py  runner.py  usage.py
piper/attended/: cli.py
piper/blocking/: cli.py
piper/detached/: cli.py
piper/examples/: extract_entities.py  generate_image.py  summarize_pdf.py
piper/methods/extract-entities/: inputs.template.json
piper/methods/generate-image/: inputs.template.json  main.mthds
piper/methods/summarize-pdf/: inputs.template.json
tests/: conftest.py
tests/e2e/: test_extract_entities.py  test_generate_image.py  test_my_project.py  test_summarize_pdf.py
tests/integration/: test_fundamentals.py
tests/unit/: test_attended_cli.py  test_blocking_cli.py  test_bootstrap_script.py  test_cli.py  test_detached_cli.py  test_errors.py  test_extract_entities.py  test_file_input.py  test_generate_image.py  test_generated_clients.py  test_hello_world.py  test_inputs.py  test_mode_symmetry.py  test_run_output.py  test_summarize_pdf.py  test_usage.py
wip/: mode-split-clis.md  pr-62-review-notes.md
