[project]
name = "piper"
version = "0.14.1"
description = "Replace this with your project description"
# authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]

dependencies = [
  "httpx>=0.27.0",
  "pipelex-sdk>=0.4.0",
  "python-dotenv>=1.0.0",
  "typer>=0.15.0",
]

[project.scripts]
piper = "piper.cli:app"

[tool.setuptools]
# The method list is enumerated per method in three places that must stay in lockstep:
# piper/methods/*, this packages/package-data block, and the Makefile codegen targets.
packages = [
  "piper",
  "piper.attended",
  "piper.blocking",
  "piper.detached",
  "piper.generated",
  "piper.generated.extract_entities",
  "piper.generated.generate_image",
  "piper.generated.summarize_pdf",
]
include-package-data = true

[tool.setuptools.package-data]
piper = ["py.typed", "methods/*/main.mthds", "methods/*/inputs.template.json"]
# Ship each codegen.lock alongside its models.py so `pipelex codegen check` works on an installed copy.
"piper.generated.extract_entities" = ["codegen.lock"]
"piper.generated.generate_image" = ["codegen.lock"]
"piper.generated.summarize_pdf" = ["codegen.lock"]

[project.optional-dependencies]
dev = [
  "mypy==1.19.1",
  "pipelex-tools>=0.7.2",
  "pyright>=1.1.411",
  "pytest>=9.0.3",
  "pytest-mock>=3.14.0",
  "pytest-sugar>=1.0.0",
  "pytest_asyncio>=0.24.0",
  "ruff==0.14.13",
]

[project.urls]
Homepage = "https://pipelex.com"
Repository = "https://github.com/yourusername/piper" # Replace with your repository URL
Documentation = "https://docs.pipelex.com/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
required-version = ">=0.7.2"

[tool.mypy]
packages = ["piper"]
check_untyped_defs = true
exclude = "^.*\\.venv/.*$"
mypy_path = "."
plugins = ["pydantic.mypy"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
include = ["piper", "tests"]
analyzeUnannotatedFunctions = true
deprecateTypingAliases = false
disableBytesTypePromotions = true
enableExperimentalFeatures = false
enableTypeIgnoreComments = true
exclude = [
  "**/__pycache__",
  ".venv",
  ".git",
  "build",
  "dist",
  "**/node_modules",
  "**/.*",
]
extraPaths = ["./tests"]
reportAbstractUsage = "error"
reportArgumentType = "error"
reportAssertAlwaysTrue = "error"
reportAssertTypeFailure = "error"
reportAssignmentType = "error"
reportAttributeAccessIssue = "error"
reportCallInDefaultInitializer = true
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitOverride = true
reportImplicitStringConcatenation = false
reportImportCycles = true
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInconsistentOverload = "error"
reportIndexIssue = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeArguments = "error"
reportInvalidTypeForm = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingParameterType = "error"
reportMissingSuperCall = "none"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = false
reportNoOverloadImplementation = "error"
reportOperatorIssue = "error"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportOverlappingOverload = "error"
reportPossiblyUnboundVariable = "error"
reportPrivateImportUsage = "error"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = true
reportRedeclaration = "error"
reportReturnType = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUninitializedInstanceVariable = "none"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryTypeIgnoreComment = "none"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "none"
reportUnusedClass = "error"
reportUnusedCoroutine = "error"
reportUnusedExcept = "error"
reportUnusedExpression = "error"
reportUnusedFunction = "error"
reportUnusedImport = "none"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
typeCheckingMode = "strict"

[tool.pytest]
minversion = "9.0"
addopts = [
  "--import-mode=importlib",
  "-ra",
  "-m",
  "not (inference or llm or img_gen or extract or needs_output or pipelex_api)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
xfail_strict = true
filterwarnings = [
  "ignore:Support for class-based `config` is deprecated:DeprecationWarning",
  "ignore:websockets.*is deprecated:DeprecationWarning",
  "ignore:typing\\.io is deprecated:DeprecationWarning",
  "ignore:typing\\.re is deprecated:DeprecationWarning",
  "ignore:.*has been moved to cryptography.*",
  "ignore:Use.*Types instead",
]
markers = [
  "needs_output: tests that need output to be displayed",
  "inference: slow and costly due to inference calls",
  "llm: slow and costly due to llm inference calls",
  "img_gen: slow and costly due to image generation inference calls",
  "extract: slow and costly due to doc extraction inference calls",
  "gha_disabled: tests that should not run in GitHub Actions",
  "codex_disabled: tests that should not run in Codex",
  "dry_runnable: tests that can be run in dry-run mode",
  "pipelex_api: tests that require access to the Pipelex API",
]

[tool.ruff]
exclude = [
  ".cursor",
  ".git",
  ".github",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "piper/generated",  # generated by `pipelex codegen` — reformatting would trip the codegen.lock drift check
  "trigger_pipeline",
]
line-length = 150
target-version = "py311"

[tool.ruff.format]

[tool.ruff.lint]
ignore = ["F401"]
external = ["F401"]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "A001",
  "A002",
  "A003",
  "RUF008",
  "RUF009",
  "RUF012",
  "RUF013",
  "RUF100",
  "E501",
  "I",
]
